--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -546,7 +546,7 @@ pt-BR:
   label_preview: Pré-visualizar
   label_feed_plural: Feeds
   label_changes_details: Detalhes de todas as alterações
-  label_issue_tracking: Tarefas
+  label_issue_tracking: Formulários
   label_spent_time: Tempo gasto
   label_f_hour: "%{value} hora"
   label_f_hour_plural: "%{value} horas"
@@ -561,8 +561,8 @@ pt-BR:
   label_options: Opções
   label_copy_workflow_from: Copiar fluxo de trabalho de
   label_permissions_report: Relatório de permissões
-  label_watched_issues: Tarefas observadas
-  label_related_issues: Tarefas relacionadas
+  label_watched_issues: Formulários observados
+  label_related_issues: Formulários relacionados
   label_applied_status: Situação alterada
   label_loading: Carregando...
   label_relation_new: Nova relação
@@ -749,13 +749,13 @@ pt-BR:
   permission_edit_issues: Editar formulários
   permission_edit_own_time_entries: Editar o próprio tempo de trabalho
   permission_manage_public_queries: Gerenciar consultas públicas
-  permission_add_issues: Adicionar tarefas
+  permission_add_issues: Adicionar Formulário
   permission_log_time: Adicionar tempo gasto
   permission_view_changesets: Ver conjunto de alterações
   permission_view_time_entries: Ver tempo gasto
   permission_manage_versions: Gerenciar versões
   permission_manage_wiki: Gerenciar wiki
-  permission_manage_categories: Gerenciar categorias de tarefas
+  permission_manage_categories: Gerenciar categorias de Formulários
   permission_protect_wiki_pages: Proteger páginas wiki
   permission_comment_news: Comentar notícias
   permission_delete_messages: Excluir mensagens
@@ -945,7 +945,7 @@ pt-BR:
   label_role_non_member: Não Membro
   label_issues_visibility_own: Tarefas criadas ou atribuídas ao usuário
   field_issues_visibility: Visibilidade das tarefas
-  label_issues_visibility_all: Todas as tarefas
+  label_issues_visibility_all: Todos os Formulários
   permission_set_own_issues_private: Alterar as próprias tarefas para públicas ou privadas
   field_is_private: Privado
   permission_set_issues_private: Alterar tarefas para públicas ou privadas
@@ -998,7 +998,7 @@ pt-BR:
   label_x_issues:
     zero:  0 tarefa
     one:   1 tarefa
-    other: "%{count} tarefas"
+    other: "%{count} Formulários"
   label_repository_new: Novo repositório
   field_repository_is_default: Repositório principal
   label_copy_attachments: Copiar anexos
@@ -1131,7 +1131,7 @@ pt-BR:
   label_disable_notifications: Desabilitar notificações
   setting_search_results_per_page: Resultados de pesquisa por página
   label_blank_value: Branco
-  permission_copy_issues: Copiar tarefas
+  permission_copy_issues: Copiar formulários
   error_password_expired: Sua senha expirou ou requer atualização
   field_time_entries_visibility: Visibilidade do log de tempo
   setting_password_max_age: Requer troca de senha depois
@@ -1151,8 +1151,8 @@ pt-BR:
   error_invalid_csv_file_or_settings: O arquivo não é um arquivo CSV ou não corresponde às
     definições abaixo (%{value})
   error_can_not_read_import_file: Ocorreu um erro ao ler o arquivo para importação
-  permission_import_issues: Importar tarefas
-  label_import_issues: Importar tarefas
+  permission_import_issues: Importar formulários
+  label_import_issues: Importar formulários
   label_select_file_to_import: Selecione o arquivo para importação
   label_fields_separator: Campo separador
   label_fields_wrapper: Field empacotador
